--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -19,6 +19,7 @@
       "YEAR": "Год миссии",
       "YEAR_SELECT": "Выбрать год",
       "MISSION_NAME": "Название мисии",
+      "PLACEHOLDER": "Введите название миссии",
       "FIRST STAGE LANDING": "Посадка первой ступени",
       "NAME_MISSION_PLACEHOLDER": "Введите название миссии",
       "IS_SUCCESS": {
@@ -61,6 +62,10 @@
     "FIRST_FLIGHT": "Первый полет",
     "LAUNCH_COST": "Стоимость запуска",
     "DESCRIPTION": "Описание",
+    "DESCRIPTION_ROCKET_FALCON1": "Falcon 1 был одноразовой системой запуска, частной разработкой и производством SpaceX в 2006-2009 годах. 28 сентября 2008 года Falcon 1 стала первой частной ракетой-носителем на жидком топливе, выведенной на околоземную орбиту.",
+    "DESCRIPTION_ROCKET_FALCON9": "Falcon 9 - это двухступенчатая ракета, разработанная и изготовленная компанией SpaceX для надежной и безопасной транспортировки спутников и космического корабля Dragon на орбиту.",
+    "DESCRIPTION_ROCKET_FALCON_HEAVY": "Обладая способностью выводить на орбиту более 54 метрических тонн (119 000 фунтов) - масса, эквивалентная массе реактивного лайнера 737, загруженного пассажирами, экипажем, багажом и топливом, - Falcon Heavy может поднять более чем в два раза больше полезной нагрузки, чем следующий ближайший эксплуатационный аппарат, Delta IV Heavy, при стоимости в одну треть меньше.",
+    "DESCRIPTION_ROCKET_STARSHIP": "Starship и сверхтяжелая ракета представляют собой полностью многоразовую транспортную систему, предназначенную для обслуживания всех потребностей земной орбиты, а также Луны и Марса. Этот двухступенчатый аппарат, состоящий из сверхтяжелой ракеты-носителя и звездолета, в конечном итоге заменит Falcon 9, Falcon Heavy и Dragon.",
     "HEIGHT": "Высота",
     "DIAMETER": "Диаметр",
     "NUMBER_OF_STEPS": "Количество ступеней",
@@ -87,5 +92,14 @@
     "IMAGES": "Изображения"
   },
   "FIRST_LAUNCH": "Первый запуск",
-  "BUTTON_UP": "Наверх"
+  "BUTTON_UP": "Наверх",
+  "METRICS_SYSTEM": {
+    "OPERATION_YES": "да",
+    "OPERATION_NO": "нет",
+    "METERS": "м",
+    "TONS": "т",
+    "SECONDS": "c",
+    "NEWTON": "кН",
+    "WEIGHT": "кг"
+  }
 }
